# -ourses-Fast_api-

./: .render.yaml  Dockerfile  Procfile  README.md  install_problematic_lib.sh  main.py  my.dbsqlite3  pyproject.toml  render.yaml
actions/: create_super_user.py
alembic/: env.py
alembic/versions/: 118dd07cd348_create_all_tables.py  2fc9f7926d08_remove_unique_constraint_from_status_id.py  599200097f57_migration_tabs.py  69b738bd1204_create_all_tables.py  a494f06423c8_create_table.py  a7aca8d005ff_create_all_tables.py  abc0649425d8_create_access_token_table.py  baaab748d7df_create_all_table.py  be236a125205_create_user_table.py  c1fdcb91f786_create_user_table.py  c361d69b6264_create_table_chat.py  db5e099a0c29_create_table_courses.py  e9b9b1f8c283_create_all_tables.py  ef0c01b8d107_create_table_chat.py  f0fb8450778b_remove_unique_constraint_from_status_id.py
api/api_v1/: __init__.py  auth.py  fastapi_user_routers.py  messages.py  users.py
api/dependencies/: access_token.py  backend.py  strategy.py  user.py  user_manager.py
core/: config.py
core/Chat/: crud.py  schemas.py  view.py
core/Courses/: crud.py  schemas.py  views.py
core/Groups/: crud.py  schemas.py  view.py
core/Lessons/: crud.py  schemas.py  view.py
core/People/: crud.py  schemas.py  view.py
core/PeopleCoursesAssociation/: crud.py  schemas.py  view.py
core/PeopleGroupsAssociation/: crud.py  schemas.py  view.py
core/Status/: crud.py  schemas.py  view.py
core/Test/: view.py
core/authentication/: transport.py  user_manager.py
core/celery/: config.py  tasks.py
core/mail/: crud.py
(+18 files in other folders)
