[tool.poetry]
name = "fastapicourses"
version = "0.1.0"
description = ""
authors = ["saatarko <saatar@tut.by>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standart"], version = "^0.30.1"}
sqlalchemy = "^2.0.31"
aiosqlite = "^0.20.0"
black = "^24.4.2"
asyncio = "^3.4.3"
pydantic-settings = "^2.3.4"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
