[tool.poetry]
name = "fastapicourses"
version = "0.1.0"
description = ""
authors = ["saatarko <saatar@tut.by>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standart"], version = "^0.30.1"}
sqlalchemy = "^2.0.31"
aiosqlite = "^0.20.0"
black = "^24.4.2"
asyncio = "^3.4.3"
pydantic-settings = "^2.3.4"
alembic = "^1.13.2"
email-validator = "^2.0.0"
fastapi-mail = "^1.4.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
celery = "^5.4.0"
redis = "^5.0.7"
eventlet = "^0.36.1"
gunicorn = "^22.0.0"
upstash-redis = "^1.1.0"
fastapi-cache = "^0.1.0"
python-dotenv = "^1.0.1"
fastapi-redis-cache-reborn = "^0.3.1"
fastapi-cache2 = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
